40 narrow starter auto-configuration scope